Update README.md with plugin history overview + info Maven goal help